# Nova

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  Spec-1.adoc  Spec-1.adoc.md  gitignore  package-lock.json  package.json  pubspec.yaml
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
lib/: main.dart
lib/ai/: whisper_service.dart
lib/backend/: audio_saver.dart
lib/states/: calendar_state.dart  voice_state.dart
lib/vtt/: audio_preprocessing.dart  audio_processor.dart  audio_recorder.dart
lib/widgets/: calendar_widget.dart  chat_widget.dart  code_widget.dart
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/llm/: engine.rs  mod.rs  model.rs  types.rs
src/settings/: manifest.json  models.json
src/settings/personalities/: nova_unfiltered_prompt.json
test/: widget_test.dart
