[package]
name = "nova"
version = "0.1.0"
description = "Ai Assistant App"
authors = ["Chaotix"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
regex = "1"
